Drag and drop in Tree panel

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta charset="utf-8">
 		
 		<link rel="stylesheet" type="text/css" href="epicdoc/extjs/ext-theme-neptune-all.css" />
+		<link rel="stylesheet" type="text/css" href="epicdoc/css/epiceditor-html.css" />
 		<link rel="stylesheet" type="text/css" href="epicdoc/css/epicdoc.css" />
 		
 		<script type="text/javascript" src="epicdoc/extjs/ext-all.js"></script>
