--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	
 		<meta charset="utf-8">
 		
+		<link rel="icon" type="image/png" href="epicdoc/img/book.png" />
+		
 		<link rel="stylesheet" type="text/css" href="epicdoc/extjs/ext-theme-neptune-all.css" />
 		<link rel="stylesheet" type="text/css" href="epicdoc/css/epiceditor-html.css" />
 		<link rel="stylesheet" type="text/css" href="epicdoc/css/epicdoc.css" />
