added Indexed DB storage (of cource IE doesn't support it in local HTML)

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 		
 		<link rel="icon" type="image/png" href="epicdoc/img/book.png" />
 		
+		<!-- documentation relevant data -->
 		<script type="text/javascript" src="config.js"></script>
-		<script type="text/javascript" src="epicdoc/js/epicdoc.js"></script>
 		<script type="text/javascript" src="data.js"></script>
+		
+		<!-- whis script will load all styles and scripts for epicdoc dynamically -->
+		<script type="text/javascript" src="epicdoc/js/epicdoc.js"></script>
 
 	</head>
 
